// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footnote renders closed 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: inline-block;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 500ms ease-out;
  -webkit-transition: transform 500ms ease-out;
  transition: transform 500ms ease-out;
  overflow: hidden;
  z-index: 99999;
}

.c1 {
  position: relative;
  width: 100%;
}

.c2 {
  overflow: auto;
  position: relative;
  max-height: calc(100vh - 57px);
  -webkit-transition: height 400ms ease-out,opacity 300ms;
  transition: height 400ms ease-out,opacity 300ms;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #f7f7f8;
  height: auto;
  opacity: 1;
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (min-width:768px) {
  .c2 {
    max-height: calc(50vh - 57px);
  }
}

<div>
  Terms and conditions may apply
  <button
    id="one"
    type="button"
  >
    1
  </button>
  <button
    id="two"
    type="button"
  >
    2
  </button>
  <div
    class="c0"
    role="alert"
  >
    <div>
      <div
        tabindex="0"
      />
      <div>
        <div
          class="c1"
        >
          <hr
            class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
          <div
            class="TDS_Box-modules__verticalPadding-4___QMNNa"
          >
            <div
              class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
            >
              <div
                class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
              >
                <div
                  class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                >
                  <div
                    class="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz"
                  >
                    <span
                      class="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                    >
                      Terms and conditions
                    </span>
                    <button
                      class="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                      id="close"
                      style="padding:4px;margin:-4px"
                      type="button"
                    >
                      <i
                        aria-label="close"
                        class="TDS_Icon-modules__iconTimes___-9Po2 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size24___37pQ7"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
        </div>
        <div
          class="c2"
        />
      </div>
      <div
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Footnote renders opened 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: inline-block;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 500ms ease-out;
  -webkit-transition: transform 500ms ease-out;
  transition: transform 500ms ease-out;
  overflow: hidden;
  z-index: 99999;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.c1 {
  position: relative;
  width: 100%;
}

.c2 {
  overflow: auto;
  position: relative;
  max-height: calc(100vh - 57px);
  -webkit-transition: height 400ms ease-out,opacity 300ms;
  transition: height 400ms ease-out,opacity 300ms;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #f7f7f8;
  height: auto;
  opacity: 1;
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (min-width:768px) {
  .c2 {
    max-height: calc(50vh - 57px);
  }
}

<div>
  Terms and conditions may apply
  <button
    id="one"
    type="button"
  >
    1
  </button>
  <button
    id="two"
    type="button"
  >
    2
  </button>
  <div
    class="c0"
    role="alert"
  >
    <div>
      <div
        tabindex="0"
      />
      <div>
        <div
          class="c1"
        >
          <hr
            class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
          <div
            class="TDS_Box-modules__verticalPadding-4___QMNNa"
          >
            <div
              class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
            >
              <div
                class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
              >
                <div
                  class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                >
                  <div
                    class="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz"
                  >
                    <span
                      class="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                    >
                      Terms and conditions
                    </span>
                    <button
                      class="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                      id="close"
                      style="padding:4px;margin:-4px"
                      type="button"
                    >
                      <i
                        aria-label="close"
                        class="TDS_Icon-modules__iconTimes___-9Po2 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size24___37pQ7"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
        </div>
        <div
          class="c2"
        />
      </div>
      <div
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
